fix tabs z-index

--- a/app/assets/stylesheets/folio/console/bootstrap-overrides/_nav.sass
+++ b/app/assets/stylesheets/folio/console/bootstrap-overrides/_nav.sass
@@ -1,6 +1,8 @@
 .nav-tabs
   margin-bottom: $nav-tabs-margin
   border-bottom: 1px solid $border-color
+  position: relative
+  z-index: 2
 
   .nav-link
     border: 0
@@ -11,6 +13,10 @@
 
     &.active
       font-weight: $font-weight-bold
+
+.tab-content
+  position: relative
+  z-index: 1
 
 .nav-pills
   .nav-item
